@@ -4,14 +4,18 @@
 # built-in commands.  Sourcing this file into Tcl runs the tests and
 # generates output for errors.  No output means no errors were found.
 #
-# Copyright (c) 1995-1997 Sun Microsystems, Inc.
+# Copyright (c) 1995-1998 Sun Microsystems, Inc.
+# Copyright (c) 1998-1999 by Scriptics Corporation.
 #
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: clock.test,v 1.4 2000/07/16 18:03:59 mo Exp $
+# RCS: @(#) $Id: clock.test,v 1.13.2.1 2000/08/07 21:30:35 hobbs Exp $
 
-if {[string compare test [info procs test]] == 1} then {source defs}
+if {[lsearch [namespace children] ::tcltest] == -1} {
+    package require tcltest
+    namespace import -force ::tcltest::*
+}
 
 test clock-1.1 {clock tests} {
     list [catch {clock} msg] $msg
@@ -101,7 +105,7 @@ test clock-3.9 {clock format tests} {unixOrPc nonPortable} {
 } "Wed Dec 31 11:59:59 PM 1969"
 test clock-3.10 {clock format tests} {
     list [catch {clock format 123 -bad arg} msg] $msg
-} {1 {bad switch "-bad": must be -format, or -gmt}}
+} {1 {bad switch "-bad": must be -format or -gmt}}
 test clock-3.11 {clock format tests} {
     clock format 123 -format "x"
 } x
@@ -143,7 +147,7 @@ test clock-4.8 {clock scan tests} {
 } {Oct 23,1992 15:00 GMT}
 test clock-4.9 {clock scan tests} {
     list [catch {clock scan "Jan 12" -bad arg} msg] $msg
-} {1 {bad switch "-bad": must be -base, or -gmt}}
+} {1 {bad switch "-bad": must be -base or -gmt}}
 # The following two two tests test the two year date policy
 test clock-4.10 {clock scan tests} {
     set time [clock scan "1/1/71" -gmt true]
@@ -415,6 +419,6 @@ test clock-7.3 {clock scan next monthname} {
 } "05.2001"
 
 # cleanup
-#::tcltest::cleanupTests
-#return
+::tcltest::cleanupTests
+return
 
