@@ -6,13 +6,17 @@
 #
 # Copyright (c) 1991-1993 The Regents of the University of California.
 # Copyright (c) 1994-1996 Sun Microsystems, Inc.
+# Copyright (c) 1998-1999 by Scriptics Corporation.
 #
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id$
+# RCS: @(#) $Id: concat.test,v 1.5 2000/04/10 17:18:58 ericm Exp $
 
-if {[string compare test [info procs test]] == 1} then {source defs}
+if {[lsearch [namespace children] ::tcltest] == -1} {
+    package require tcltest
+    namespace import -force ::tcltest::*
+}
 
 test concat-1.1 {simple concatenation} {
     concat a b c d e f g
@@ -44,3 +48,19 @@ test concat-4.2 {pruning off extra white space} {
 test concat-4.3 {pruning off extra white space sets length correctly} {
     llength [concat { {{a}} }]
 } 1
+
+# cleanup
+::tcltest::cleanupTests
+return
+
+
+
+
+
+
+
+
+
+
+
+
